<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nnum_title"
        android:textSize="12pt" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nnum_number" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/nnumber1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nnum_class" />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/nnspinner1"
            android:entries="@array/cl" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nnum_cname" />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/nnspinner2" />
    </LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/nnum_button1"
        android:onClick="switchA" />
</LinearLayout>
