<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snum_title"
        android:textSize="12pt" />
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/snum_class" />
        <Spinner
            android:id="@+id/snspinner1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:entries="@array/cl" />
    </LinearLayout>
    <Button 
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/snum_button"
        android:onClick="switchS" />
        <ListView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/snum_result" />

</LinearLayout>
